Correct Chinese place order

--- a/work_OD.Rmd
+++ b/work_OD.Rmd
@@ -114,6 +114,10 @@ nodes_OD = data.frame(node_name = c(origin_list, destination_list)) %>%
 DISTRICT_ORDER = c("Central and Western", "Wan Chai", "Eastern", "Southern", "Yau Tsim Mong", "Sham Shui Po", "Kowloon City", "Wong Tai Sin", "Kwun Tong", "Kwai Tsing", "Tsuen Wan", "Tuen Mun", "Yuen Long", "North", "Tai Po", "Sha Tin", "Sai Kung", "Islands")
 
 WORKPLACE_ORDER = c("Central and Western", "Wan Chai", "Eastern", "Southern", "Yau Tsim Mong", "Sham Shui Po", "Kowloon City", "Wong Tai Sin", "Kwun Tong", "Kwai Chung New Town", "Tsuen Wan New Town", "Tsing Yi New Town", "Tuen Mun New Town", "Tin Shui Wai New Town", "Yuen Long New Town", "Fanling/ Sheung Shui New Town", "Tai Po New Town", "Sha Tin New Town", "Ma On Shan New Town", "Tseung Kwan O New Town", "North Lantau New Town", "Other areas in the New Territories", "No fixed places of work in Hong Kong/ Marine/ Work at home/ Places outside Hong Kong")
+
+DISTRICT_ORDER_CHI = c("中西區", "灣仔", "東區", "南區", "油尖旺", "深水埗", "九龍城", "黃大仙", "觀塘", "葵青", "荃灣", "屯門", "元朗", "北區", "大埔", "沙田", "西貢", "離島")
+
+WORKPLACE_ORDER_CHI = c("中西區", "灣仔", "東區", "南區", "油尖旺", "深水埗", "九龍城", "黃大仙", "觀塘", "葵涌新市鎮", "荃灣新市鎮", "青衣新市鎮", "屯門新市鎮", "天水圍新市鎮", "元朗新市鎮", "粉嶺／上水新市鎮", "大埔新市鎮", "沙田新市鎮", "馬鞍山新市鎮", "將軍澳新市鎮",  "北大嶼山新市鎮", "新界其他地區", "在香港沒有固定工作地點／水上／於家中工作／香港以外地方")
 ```
 
 ```{r}
@@ -130,7 +134,9 @@ work_OD_plot = work_OD_differentiate %>%
 work_OD_plot_reorder = work_OD_plot %>% 
   mutate(
     place_of_residence = factor(place_of_residence, DISTRICT_ORDER),
-    place_of_work = factor(place_of_work, WORKPLACE_ORDER)
+    place_of_work = factor(place_of_work, WORKPLACE_ORDER),
+    place_of_residence_chi = factor(place_of_residence_chi, DISTRICT_ORDER_CHI),
+    place_of_work_chi = factor(place_of_work_chi, WORKPLACE_ORDER_CHI)
   )
 
 work_OD_plot_reorder_rmspecial = work_OD_plot_reorder %>%
